# src/routes/Api.ts
@@ -3,6 +3,7 @@ import { Router } from 'express';
 import StatusMonitorController from '../controllers/Monitor/StatusController';
 
 import RegisterController from '../controllers/Auth/Register';
+import VerificationController from '../controllers/Auth/Verification';
 
 const router = Router();
 
@@ -10,6 +11,7 @@ const router = Router();
  * Authentication endpoints
  */
 router.post('/auth/register', RegisterController.perform);
+router.post('/auth/:id/:emailCode', VerificationController.perform);
 
 /**
  * Monitoring endpoints
